# Version 1.2.1
- Bug fixes: Observation class used incorrect variance model for location class A

# Version 1.2.0
- Added unit tests
- Added getLocationClassInput() to Observation class
- Allow fitting with equal movement variance in several models (equalvar = TRUE)
- Measurement$simulate() now works with splines when object has not been fitted
- Bug fixes: Wrong parameter length in DIRAC; simulation of Animal had issues with state fractions; CTCRW simulation had minor bug in state mean; wrong index in Measurement simulation if observation had different variance models; Not all input checks were performed for Observation; 

# Version 1.1.0
- Added inner.control to fitTrack to control Newton optimization of random effects
- Added getTrack function to extract estimated track as data frame
- Added movement model: Dirac (DIRAC)
- Added more input checks
- Added variance parameters to output
- Added experimental support for the multivariate symmetric hyperbolic distribution for measurements
- Bug fixes: error with difftime in Anima; rwcauchy; simulation of GPS measurements resulting in NA's; calculation of state fractions
- Now registers routines as required by CRAN
- Small updates to examples and vignette

# Version 1.0.1
- Added namespaces to c++ code to avoid multiple definitions from TMB.
- Added imports from grDevices, graphics and utils.
- Small bug fixes for special cases in Measurement and Observation class
- Now possible to use several break methods from grDevices (Sturges, FD, scott) in roseplot
- New examples

# Version 1.0.0
- Added movement models: Discrete Time Correlated Random Walk (dcrw), Discrete Step lenght and Bearings model (dsb)
- Removed movement model mpctcrw
- Possibility of extracting and plotting step lengths and turning angles between predicted states for all models
- Support for modelling on a scale of either nautical miles or latitude/longitude for both states and observations.
- Removed bootstrap functionality