@@ -9,6 +9,7 @@ export(DCRW)
 export(DIRAC)
 export(DSBHN)
 export(DSBW)
+export(GDCRW)
 export(Measurement)
 export(Movement)
 export(Observation)
@@ -27,6 +28,7 @@ exportClasses(DCRW)
 exportClasses(DIRAC)
 exportClasses(DSBHN)
 exportClasses(DSBW)
+exportClasses(GDCRW)
 exportClasses(Measurement)
 exportClasses(Movement)
 exportClasses(Observation)
