@@ -39,7 +39,7 @@ Parton, A., P. G. Blackwell, and A. Skarin. (2016) Bayesian Inference for Contin
 Other "Movement models": \code{\link{CTCRW-class}},
   \code{\link{DCRW-class}}, \code{\link{DIRAC-class}},
   \code{\link{DSBHN-class}}, \code{\link{DSBW-class}},
-  \code{\link{IDCRW-class}}, \code{\link{MPCTCRW-class}},
+  \code{\link{GDCRW-class}}, \code{\link{MPCTCRW-class}},
   \code{\link{Movement-class}}, \code{\link{OUL-class}},
   \code{\link{OUV-class}}, \code{\link{RW-class}}
 }
