@@ -44,7 +44,7 @@ McClintock, B. T., London, J. M., Cameron, M. F. and Boveng, P. L. (2015) Modell
 Other "Movement models": \code{\link{CSB-class}},
   \code{\link{CTCRW-class}}, \code{\link{DCRW-class}},
   \code{\link{DIRAC-class}}, \code{\link{DSBHN-class}},
-  \code{\link{IDCRW-class}}, \code{\link{MPCTCRW-class}},
+  \code{\link{GDCRW-class}}, \code{\link{MPCTCRW-class}},
   \code{\link{Movement-class}}, \code{\link{OUL-class}},
   \code{\link{OUV-class}}, \code{\link{RW-class}}
 }
