@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/Movement_IDCRW.R
+% Please edit documentation in R/Movement_GDCRW.R
 \docType{class}
-\name{IDCRW-class}
-\alias{IDCRW-class}
-\alias{IDCRW}
-\title{A Reference Class for fitting an Irregularized first Difference Correlated Random Walk model.}
+\name{GDCRW-class}
+\alias{GDCRW-class}
+\alias{GDCRW}
+\title{A Reference Class for fitting a Generalized first Difference Correlated Random Walk model.}
 \description{
 The reference class implements an Irregularized first Difference Correlated Random Walk (Albertsen 2016). The velocity is modelled by the (bivariate) stochastic differential equation
 \deqn{dV_t = -\pmatrix{ -\log\gamma_1 & \phi \cr -\phi & -\log\gamma_2 } (V_t-\mu) d_t + S dB_t,}
@@ -25,7 +25,7 @@ Hence,
 
 \examples{
 d <- subadult_ringed_seal
-mov <- argosTrack:::IDCRW(unique(as.POSIXct(d$date,tz="GMT")))
+mov <- argosTrack:::GDCRW(unique(as.POSIXct(d$date,tz="GMT")))
 
 }
 \references{
