@@ -29,7 +29,7 @@ Nielsen, A., Bigelow, K. A., Musyl, M. K. and Sibert, J. R. (2006) Improving lig
 Other "Movement models": \code{\link{CSB-class}},
   \code{\link{CTCRW-class}}, \code{\link{DCRW-class}},
   \code{\link{DIRAC-class}}, \code{\link{DSBHN-class}},
-  \code{\link{DSBW-class}}, \code{\link{IDCRW-class}},
+  \code{\link{DSBW-class}}, \code{\link{GDCRW-class}},
   \code{\link{MPCTCRW-class}},
   \code{\link{Movement-class}}, \code{\link{OUL-class}},
   \code{\link{OUV-class}}
